Add message/chat component and working WebSocket client (sock js/stomp)

--- a/src/utilities/variables.scss
+++ b/src/utilities/variables.scss
@@ -2,6 +2,10 @@ $primary-black: #000000;
 $primary-white: white;
 $primary-red: #ff0000;
 $primary-green: #e2ecdc;
+$secondary-green: #548054;
 $secondary-yellow: #ffe5b2;
 $vipps-orange: #ff5b24;
-$primary-grey: #b9b8b8
+$primary-grey: #b9b8b8;
+$secondary-grey: #d8d7d7;
+
+$chat-width: 25rem;
